// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ClusterActionsDropdown /> admin console url does not exist should render (no console) 1`] = `
<Dropdown
  dropdownItems={
    Array [
      <DropdownItem
        component="button"
        isDisabled={true}
        title="Launch Console"
        tooltip={
          <span>
            Admin console is not yet available for this cluster
          </span>
        }
      >
        Launch Console
      </DropdownItem>,
      <DropdownItem
        component="button"
        onClick={[Function]}
        title="Edit Display Name"
      >
        Edit Display Name
      </DropdownItem>,
      <DropdownItem
        component="button"
        onClick={[Function]}
        title="Add Console URL"
      >
        Add Console URL
      </DropdownItem>,
    ]
  }
  isOpen={false}
  onSelect={[Function]}
  position="right"
  toggle={
    <DropdownToggle
      onToggle={[Function]}
    >
      Actions
    </DropdownToggle>
  }
/>
`;

exports[`<ClusterActionsDropdown /> cluster with state not ready should render (not ready) 1`] = `
<Dropdown
  dropdownItems={
    Array [
      <DropdownItem
        component="button"
        isDisabled={true}
        title="Launch Console"
        tooltip={
          <span>
            Admin console is not yet available for this cluster
          </span>
        }
      >
        Launch Console
      </DropdownItem>,
      <DropdownItem
        component="button"
        onClick={[Function]}
        title="Edit Display Name"
      >
        Edit Display Name
      </DropdownItem>,
      <DropdownItem
        component="button"
        isDisabled={true}
        title="Scale Cluster"
        tooltip={
          <span>
            This cluster is not ready
          </span>
        }
      >
        Scale Cluster
      </DropdownItem>,
      <DropdownItem
        component="button"
        onClick={[Function]}
        title="Delete Cluster"
      >
        Delete Cluster
      </DropdownItem>,
    ]
  }
  isOpen={false}
  onSelect={[Function]}
  position="right"
  toggle={
    <DropdownToggle
      onToggle={[Function]}
    >
      Actions
    </DropdownToggle>
  }
/>
`;

exports[`<ClusterActionsDropdown /> cluster with state ready and console url should render 1`] = `
<Dropdown
  dropdownItems={
    Array [
      <DropdownItem
        href="www.testuhc.com"
        rel="noopener noreferrer"
        target="_blank"
        title="Launch Console"
      >
        Launch Console
      </DropdownItem>,
      <DropdownItem
        component="button"
        onClick={[Function]}
        title="Edit Display Name"
      >
        Edit Display Name
      </DropdownItem>,
      <DropdownItem
        component="button"
        onClick={[Function]}
        title="Scale Cluster"
      >
        Scale Cluster
      </DropdownItem>,
      <DropdownItem
        component="button"
        onClick={[Function]}
        title="Delete Cluster"
      >
        Delete Cluster
      </DropdownItem>,
    ]
  }
  isOpen={false}
  onSelect={[Function]}
  position="right"
  toggle={
    <DropdownToggle
      onToggle={[Function]}
    >
      Actions
    </DropdownToggle>
  }
/>
`;

exports[`<ClusterActionsDropdown /> cluster with state uninstalling should render (uninstalling) 1`] = `
<Dropdown
  dropdownItems={
    Array [
      <DropdownItem
        component="button"
        isDisabled={true}
        title="Launch Console"
        tooltip={
          <span>
            The cluster is being uninstalled
          </span>
        }
      >
        Launch Console
      </DropdownItem>,
      <DropdownItem
        component="button"
        isDisabled={true}
        title="Edit Display Name"
        tooltip={
          <span>
            The cluster is being uninstalled
          </span>
        }
      >
        Edit Display Name
      </DropdownItem>,
      <DropdownItem
        component="button"
        isDisabled={true}
        title="Scale Cluster"
        tooltip={
          <span>
            The cluster is being uninstalled
          </span>
        }
      >
        Scale Cluster
      </DropdownItem>,
      <DropdownItem
        component="button"
        isDisabled={true}
        title="Delete Cluster"
        tooltip={
          <span>
            The cluster is being uninstalled
          </span>
        }
      >
        Delete Cluster
      </DropdownItem>,
    ]
  }
  isOpen={false}
  onSelect={[Function]}
  position="right"
  toggle={
    <DropdownToggle
      onToggle={[Function]}
    >
      Actions
    </DropdownToggle>
  }
/>
`;

exports[`<ClusterActionsDropdown /> read only cluster should render correctly 1`] = `
<Dropdown
  dropdownItems={
    Array [
      <DropdownItem
        href="www.testuhc.com"
        rel="noopener noreferrer"
        target="_blank"
        title="Launch Console"
      >
        Launch Console
      </DropdownItem>,
    ]
  }
  isOpen={false}
  onSelect={[Function]}
  position="right"
  toggle={
    <DropdownToggle
      onToggle={[Function]}
    >
      Actions
    </DropdownToggle>
  }
/>
`;

exports[`<ClusterActionsDropdown /> self managed cluster should render (self managed) 1`] = `
<Dropdown
  dropdownItems={
    Array [
      <DropdownItem
        component="button"
        isDisabled={true}
        title="Launch Console"
        tooltip={
          <span>
            Admin console is not yet available for this cluster
          </span>
        }
      >
        Launch Console
      </DropdownItem>,
      <DropdownItem
        component="button"
        onClick={[Function]}
        title="Edit Display Name"
      >
        Edit Display Name
      </DropdownItem>,
      <DropdownItem
        component="button"
        onClick={[Function]}
        title="Add Console URL"
      >
        Add Console URL
      </DropdownItem>,
    ]
  }
  isOpen={false}
  onSelect={[Function]}
  position="right"
  toggle={
    <DropdownToggle
      onToggle={[Function]}
    >
      Actions
    </DropdownToggle>
  }
/>
`;
